# rustbot_cntrl

./: .gitignore  Cargo.toml  README.md
configs/: caminfo.txt  caminfo_0.txt  caminfo_1.txt  filepaths.txt  robinfo.txt
proto_template/: egm.proto
rustbot_cntrl/: Cargo.toml
src/: abb_rob.rs  analysis.rs  angle_tools.rs  config.rs  control.rs  helper_funcs.rs  lib.rs  main.rs  mapping.rs  modelling.rs  networking.rs  quartenion.rs  string_tools.rs  tcp_sock.rs  terr_map_gen.rs  terr_map_sense.rs  terr_map_tools.rs  trajectory_planner.rs
src/analysis/: analyser.rs  data_handler.rs
src/aruco_detection/: camera_calibration_v2.py  create_aruco_id.py  create_charuco.py  detect_aruco_id.py
src/control/: EGM_control.rs  abb_rob.rs  force_control.rs  misc_tools.rs  tcp_sock.rs  trajectory_planner.rs
src/control/egm_control/: abb_egm.rs  data_gen.rs  egm_proto.rs  egm_udp.rs
src/control/force_control/: force_control.rs  force_function_generator.rs
src/control/misc_tools/: angle_tools.rs  misc.rs  string_tools.rs
src/helper_funcs/: helper_funcs.rs
src/mapping/: rs2_processing.rs  terr_map_sense.rs  terr_map_tools.rs
src/mapping/rs2_processing/: pointcloud.rs  process_frame.rs
src/modelling/: experiment_model.rs  irb6400_model.rs
src/networking/: tcp_sock.rs
