
[workspace.lints.rust]
unsafe_code = "forbid"

[package]
name = "rustbot_cntrl"
version = "0.1.0"
edition = "2024"

[dependencies]
raylib = { version = "5.5", features = ["custom_frame_control"] }
rand = "0.10.0"
realsense-rust = { version = "1.2.3" }
realsense-sys = "2.54.3"
anyhow = "1.0.99"
chrono = "0.4.41"
nalgebra = "0.34.1"
